[gd_scene load_steps=3 format=3 uid="uid://bi2xrhqj8ehaa"]

[ext_resource type="Script" path="res://scripts/high_score_menu.gd" id="1_1ckq0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6nc0l"]
content_margin_top = 20.0

[node name="HighScoreMenu" type="Node"]
script = ExtResource("1_1ckq0")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.439216, 0.572549, 0.745098, 1)

[node name="Label" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_6nc0l")
text = "Highscores"
horizontal_alignment = 1

[node name="ScoresTables" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.8
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="HighscoreTable" type="VBoxContainer" parent="UI/ScoresTables"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/ScoresTables/HighscoreTable"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "Most Points:"

[node name="BestTimesTable" type="VBoxContainer" parent="UI/ScoresTables"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/ScoresTables/BestTimesTable"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "Best times:"

[node name="BackButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="UI/BackButton" to="." method="_on_back_button_pressed"]
